<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.Activities.ForgotpasswordActivity"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetPassword"
            android:textSize="19sp"
            android:textStyle="bold"
            android:fontFamily="@font/cight"
            android:textColor="#FFF"
            android:padding="10dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/linear_id"
            android:layout_marginBottom="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:id="@+id/linear_id">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/forgetEmailET_id"
                android:background="@drawable/rounded_edittext"
                android:layout_margin="10dp"
                android:hint="@string/email"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:fontFamily="@font/cight"
                android:textSize="16sp"
                android:textStyle="bold"
                android:inputType="textEmailAddress" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/send_id"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/send"
                android:textStyle="bold"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:fontFamily="@font/cight"
                android:background="@drawable/rounded_buuton" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/message"
                android:textSize="15sp"
                android:textStyle="bold"
                android:fontFamily="@font/cight"
                android:textColor="#FFF"
                android:gravity="right"
                android:padding="10dp" />
        </LinearLayout>

    </RelativeLayout>
</layout>