<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eidOm"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:fontFamily="@font/cight"
                    android:textColor="@color/color1"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/produce"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:fontFamily="@font/cight"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/eidOm_btn_id"
                    android:text="@string/moreBtn1"
                    android:textSize="15sp"
                    android:background="@drawable/rounded_buuton"
                    android:textColor="#FFF"
                    android:layout_gravity="center"
                    android:fontFamily="@font/cight"
                    android:layout_margin="3dp"
                    android:gravity="center"
                    android:padding="4dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eidlove"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:fontFamily="@font/cight"
                    android:textColor="@color/color1"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/produce2"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:fontFamily="@font/cight"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/eidLove_btn_id"
                    android:text="@string/moreBtn1"
                    android:textSize="15sp"
                    android:background="@drawable/rounded_buuton"
                    android:textColor="#FFF"
                    android:layout_margin="3dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/cight"
                    android:padding="4dp"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ramadan"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:fontFamily="@font/cight"
                    android:textColor="@color/color1"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/produce7"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:fontFamily="@font/cight"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Ramadan_btn_id"
                    android:text="@string/moreBtn1"
                    android:textSize="15sp"
                    android:background="@drawable/rounded_buuton"
                    android:textColor="#FFF"
                    android:layout_margin="3dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/cight"
                    android:padding="4dp"
                    android:gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eidAdha"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:fontFamily="@font/cight"
                    android:textColor="@color/color1"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/produce3"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:fontFamily="@font/cight"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/adha_btn_id"
                    android:text="@string/moreBtn1"
                    android:textSize="15sp"
                    android:background="@drawable/rounded_buuton"
                    android:textColor="#FFF"
                    android:layout_margin="3dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/cight"
                    android:padding="4dp"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eidmelad"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:fontFamily="@font/cight"
                    android:textColor="@color/color1"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/produce4"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:fontFamily="@font/cight"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/melad_btn_id"
                    android:text="@string/moreBtn1"
                    android:textSize="15sp"
                    android:background="@drawable/rounded_buuton"
                    android:textColor="#FFF"
                    android:layout_margin="3dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/cight"
                    android:padding="4dp"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eidracSana"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:fontFamily="@font/cight"
                    android:textColor="@color/color1"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/produce6"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:fontFamily="@font/cight"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/racSana_btn_id"
                    android:text="@string/moreBtn1"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:background="@drawable/rounded_buuton"
                    android:textColor="#FFF"
                    android:layout_margin="3dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/cight"
                    android:padding="4dp"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eidzawag"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:fontFamily="@font/cight"
                    android:textColor="@color/color1"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/produce5"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:fontFamily="@font/cight"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/zawag_btn_id"
                    android:text="@string/moreBtn1"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:background="@drawable/rounded_buuton"
                    android:textColor="#FFF"
                    android:layout_margin="3dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/cight"
                    android:padding="4dp"
                    android:gravity="center"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>